<resources>
    <string name="app_name">AutoScad</string>
    <string name="logo">Logo</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="text_empty_field">Inputan Tidak Boleh Kosong</string>
    <string name="text_invalid_email">Alamat Email Tidak Valid</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="alamat_email">Alamat Email</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="silahkan_masukkan_email_anda">Silahkan Masukkan Email Anda</string>
    <string name="reset_password">Reset Password</string>
    <string name="nama">Nama</string>
    <string name="ulangi_password">Ulangi Password</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="profil">Profil</string>
    <string name="riwayat_deteksi">Riwayat Deteksi</string>
    <string name="keluar">Keluar</string>
    <string name="mulai_scan">Mulai Scan</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="bantuan">Bantuan</string>
    <string name="pengaturan_profil">Pengaturan Profil</string>
    <string name="credit">AutoScad Team, 2019 @ All Rights Reserved</string>
    <string name="kembali">Kembali</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="ubah_data">Ubah Data</string>
    <string name="silahkan_masukkan_password_baru_anda">Silahkan Masukkan Password Baru Anda</string>
    <string name="password_baru">Password Baru</string>
    <string name="hasil_scan">Hasil Scan</string>
    <string name="ambil_gambar">Ambil Gambar</string>
    <string name="proses_gambar">Proses Gambar</string>
    <string name="text_failed_register">Gagal Mendaftarkan Akun</string>
    <string name="text_not_match">Password Tidak Sesuai</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_back">Back Button</string>
</resources>
