<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".Activity.AboutActivity">
    <ImageView
        android:id="@+id/img_back"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:src="@drawable/ic_arrow_back_black_24dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="10dp"
        android:tint="@color/colorWhite"
        android:contentDescription="@string/kembali"/>
    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:src="@drawable/logo"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/logo"/>
    <TextView
        android:id="@+id/tv_right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_logo"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:textAlignment="center"
        android:text="@string/credit"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"/>
</RelativeLayout>