<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ScanActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ToolbarColoredBackArrow">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            app:titleTextColor="@color/colorWhite" />
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/img_foto"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_below="@id/appbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/hasil_scan" />

    <Button
        android:id="@+id/btn_pick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_foto"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button_all"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/ambil_gambar"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_process"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_pick"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/button_all"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/proses_gambar"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>